--- a/view/src/styles/productDetails.scss
+++ b/view/src/styles/productDetails.scss
@@ -2,6 +2,7 @@
   background: white;
   max-width: 1200px;
   margin: 0 auto;
+  margin-bottom: 20px;
   box-shadow: 0 1px 3px 0 rgba(0,0,0,.3);
   border-radius: 4px;
   border-top: 0;
@@ -10,21 +11,34 @@
 .details-container {
   min-height: 100px;
   display: flex;
-  //align-items: center;
-  //justify-content: center;
   font-size: 15px!important;
-  //width: 100%;
   min-width: 0;
-  //padding: 12px 16px;
   text-align: left;
   padding-left: 36px;
 
   .details-left{
     max-width: 700px;
+    margin: auto;
+    padding-bottom: 20px;
 
+    h2 {
+      margin-bottom: 36px;
+    }
+    
     .details-img {
-      text-align-last: center;
       padding: 36px;
+      min-height: 450px;
+      max-height: 600px;
+      display: flex;
+      margin: auto;
+      height: 80%;
+      width: 80%;
+
+      img {
+        margin: auto;  /* Magic! */
+        max-width: 100%;
+        max-height: 100%;
+      }
     }
   }
 
