--- a/view/src/styles/searchList/productList.css
+++ b/view/src/styles/searchList/productList.css
@@ -8,6 +8,9 @@
 ul {
   padding: 16px !important;
 }
+ul :hover {
+  text-decoration: none;
+}
 
 .product-column {
   flex-direction: column;
@@ -16,14 +19,19 @@ ul {
   text-align: left;
   color: black;
 }
+
 .product-left {
   width: 25%;
-  max-width: 100px;
-  min-width: 10px;
+}
+.product-left img {
+  height: 200px;
 }
 
 .product-center {
+  padding-left: 8px;
   width: 50%;
+  margin-top: 36px;
+  align-self: baseline;
 }
 
 .product-right {
