--- a/view/src/styles/shared/productContainer.scss
+++ b/view/src/styles/shared/productContainer.scss
@@ -1,6 +1,6 @@
 .product-container {
   background: white;
-  max-width: 1200px;
+  max-width: 1200px!important;
   margin: 0 auto;
   margin-bottom: 20px;
   box-shadow: 0 1px 3px 0 rgba(0,0,0,.3);
